RESOLVED FIXED72774
Reflection on composited element doesn't update if the element changes to show no content
https://bugs.webkit.org/show_bug.cgi?id=72774
Summary Reflection on composited element doesn't update if the element changes to sho...
Simon Fraser (smfr)
Reported 2011-11-18 16:52:16 PST
Reflection on composited element doesn't update if the element changes to show no content
Attachments
Patch (6.89 KB, patch)
2011-11-18 16:53 PST, Simon Fraser (smfr)
cmarrin: review+
Simon Fraser (smfr)
Comment 1 2011-11-18 16:53:36 PST
Simon Fraser (smfr)
Comment 2 2011-11-18 16:54:09 PST
Chris Marrin
Comment 3 2011-11-18 17:15:17 PST
Comment on attachment 115908 [details] Patch Looks good
Simon Fraser (smfr)
Comment 4 2011-11-18 17:17:30 PST
Note You need to log in before you can comment on or make changes to this bug.