Reflection on composited element doesn't update if the element changes to show no content https://bugs.webkit.org/show_bug.cgi?id=72774

Source/WebCore:

Reviewed by Chris Marrin.

When a style change results in a reflected element losing its backing store,
we need to clear the backing stores on the layer clones as well.

Test: compositing/reflections/become-simple-composited-reflection.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateLayerDrawsContent):

LayoutTests:

Reviewed by Chris Marrin.

Test that removes the background-color of a reflected, composited element.

* compositing/reflections/become-simple-composited-reflection-expected.png: Added.
* compositing/reflections/become-simple-composited-reflection-expected.txt: Added.
* compositing/reflections/become-simple-composited-reflection.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@100831 bbb929c8-8fbe-4397-9dbb-9b2b20218538